// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`sleep target should sleep and not be able to attack 1`] = `
"*asperiores* заклинанием _Усыпление_ заставил *alias* заснуть на этот раунд
\\[ 📖5 ]
*alias* пытался атаковать *asperiores*, но у него не получилось
_Усыпление_ *asperiores*
*alias* пытался использовать _Защита_ на *asperiores*, но у него не получилось
_Усыпление_ *asperiores*
*alias* пытался использовать _Лечение руками_ на *alias*, но у него не получилось
_Усыпление_ *asperiores*
*alias* пытался использовать _👹 Берсерк_ на *alias*, но у него не получилось
_Усыпление_ *asperiores*"
`;

exports[`sleep should handle several casters 1`] = `
"*asperiores* заклинанием _Усыпление_ заставил *alias* заснуть на этот раунд
\\[ 📖5 ]
*repellat* заклинанием _Усыпление_ заставил *alias* заснуть на этот раунд
\\[ 📖5 ]
*alias* пытался атаковать *asperiores*, но у него не получилось
_Усыпление_ *asperiores*
_Усыпление_ *repellat*
*alias* пытался использовать _Защита_ на *asperiores*, но у него не получилось
_Усыпление_ *asperiores*
_Усыпление_ *repellat*
*alias* пытался использовать _Лечение руками_ на *alias*, но у него не получилось
_Усыпление_ *asperiores*
_Усыпление_ *repellat*
*alias* пытался использовать _👹 Берсерк_ на *alias*, но у него не получилось
_Усыпление_ *asperiores*
_Усыпление_ *repellat*"
`;

exports[`sleep should cast long 1`] = `
"⏳1 *asperiores* заклинанием _Усыпление_ заставил *alias* заснуть на этот раунд
\\[ 📖5 ]"
`;
